--- a/contactus.html
+++ b/contactus.html
@@ -104,7 +104,7 @@ input[type=submit]:hover {
 <h2>BOOK TODAY</h2>
 </div>
 <div class="container">
-  <form action="Thankyou.html">
+  <form action="ThankYou.html">
     <label for="fname">Full Name</label>
     <input type="text" id="fname" name="fullname" placeholder="Your fullname..">
 
